Fix filters z-index, cleanup.

--- a/ssg/source/_styles_templates/_styles_industry/style.styl
+++ b/ssg/source/_styles_templates/_styles_industry/style.styl
@@ -584,7 +584,6 @@ footer
     gap 12px 8px
     flex-flow row wrap
     width: 100%;
-    // padding-top 150px
     
 .mobile_filters_collapse
     display none
@@ -4586,19 +4585,10 @@ a:hover > .login_headline
                 word-wrap: break-word
 
     .grid_search
-        // display grid
         display flex
-        // grid-template-columns 1fr 1fr 1fr
-        // grid-template-columns repeat(auto-fill, minmax(300px, 1fr))
-        // grid-template-rows auto
-        // grid-gap 1rem
         flex-wrap wrap
-        // padding-left 6rem
-        // padding-right 6rem
-        // padding-top 150px
         margin-top 10px
         margin-bottom 0rem
-        z-index 999
 
         input, select
             flex 1 1 0%
